--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine Link Generator</title>
+    <title>Will you be my valentine😍</title>
     <style>
         * {
             margin: 0;
@@ -39,7 +39,8 @@
             display: none;
         }
 
-    .cat-container {
+       /* Cat Character - Cuter Version */
+.cat-container {
     position: relative;
     margin: 0 auto 30px;
     width: 180px;
@@ -128,6 +129,7 @@
     0%, 100% { transform: translateY(0px) rotate(-5deg); }
     50% { transform: translateY(-8px) rotate(5deg); }
 }
+
         h1 {
             color: #333;
             margin-bottom: 10px;
@@ -390,7 +392,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="toName">Their Name (To):</label>
+                    <label for="toName">Valentine Name (To):</label>
                     <input type="text" id="toName" placeholder="e.g., Sarah" required>
                 </div>
 
