--- a/index.html
+++ b/index.html
@@ -403,6 +403,23 @@
             border: 1px solid #ffd700;
         }
 
+        .creator-credit {
+            margin-top: 20px;
+            font-size: 11px;
+            color: #999;
+            text-align: center;
+        }
+
+        .creator-credit a {
+            color: #ff69b4;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        .creator-credit a:hover {
+            color: #ff1493;
+        }
+
         @media (max-width: 600px) {
             .container {
                 padding: 40px 25px;
@@ -458,6 +475,10 @@
                 <div class="note">
                     <strong>💡 Pro Tip:</strong> Send this unique link to anyone! Each person will see their personalized Valentine proposal. Perfect for Instagram/TikTok reels!
                 </div>
+            </div>
+
+            <div class="creator-credit">
+                Made with 💕 by Foumi
             </div>
         </div>
 
